applications/nginx-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: nginx-test

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx-test

  template:
    metadata:
      labels:
        app: nginx-test

    spec:
      containers:
      - name: nginx
        image: nginx:1.29

        ports:
        - containerPort: 80
