applications/nginx-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: nginx-test

spec:
  selector:
    app: nginx-test

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
