applications/nginx-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-test
  namespace: nginx-test

spec:
  ingressClassName: traefik

  tls:
  - hosts:
    - nginx-test.watworld.uk
    secretName: nginx-test-tls

  rules:

  - host: nginx-test.watworld.uk

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: nginx-test

            port:
              number: 80
